# docs/swagger.yaml
@@ -45,6 +45,18 @@ definitions:
         description: 用户状态
         type: string
     type: object
+  request.GetPackageList:
+    properties:
+      package_name:
+        description: 包名
+        type: string
+      page:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页大小
+        type: integer
+    type: object
   request.GetUserList:
     properties:
       nickName:
@@ -140,6 +152,15 @@ definitions:
         type: integer
       data: {}
       msg:
+        type: string
+    type: object
+  response.SysCaptchaResponse:
+    properties:
+      captchaId:
+        type: string
+      captchaLength:
+        type: integer
+      picPath:
         type: string
     type: object
   response.SysUserResponse:
@@ -277,6 +298,9 @@ definitions:
     type: object
 info:
   contact: {}
+  description: 使用 gin + vue 进行开发的全栈开发基础平台
+  title: Go-Vue-Admin Swagger API接口文档
+  version: v1.0.0
 paths:
   /autocode/createPackage:
     post:
@@ -312,6 +336,104 @@ paths:
       summary: 自动创建代码包
       tags:
       - SysAutoCode
+  /autocode/delPackageInfo:
+    delete:
+      consumes:
+      - application/json
+      description: 删除指定的创建的包信息
+      parameters:
+      - description: 待删除的创建的包信息
+        in: body
+        name: autoCode
+        required: true
+        schema:
+          $ref: '#/definitions/system.SysAutoCode'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除创建的包，返回操作结果
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+        "400":
+          description: 请求参数验证失败
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 删除创建的包失败
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 删除创建的包信息
+      tags:
+      - SysAutoCode
+  /autocode/getPackageList:
+    post:
+      consumes:
+      - application/json
+      description: 分页查询创建的包列表
+      parameters:
+      - description: 创建的包列表查询参数
+        in: body
+        name: packageInfo
+        required: true
+        schema:
+          $ref: '#/definitions/request.GetPackageList'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取创建的包列表成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.PageResult'
+            - properties:
+                ' msg':
+                  type: string
+                list:
+                  items:
+                    $ref: '#/definitions/system.SysAutoCode'
+                  type: array
+              type: object
+        "400":
+          description: 请求参数验证失败
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 获取创建的包列表失败
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 获取创建的包列表
+      tags:
+      - SysAutoCode
+  /base/captcha:
+    get:
+      description: 生成并返回一个新的默认数字验证码
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取验证码
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                ' msg':
+                  type: string
+                data:
+                  $ref: '#/definitions/response.SysCaptchaResponse'
+              type: object
+        "500":
+          description: 验证码获取失败
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 获取验证码
+      tags:
+      - SysUser
   /base/login:
     post:
       parameters:
@@ -364,10 +486,11 @@ paths:
       - SysUser
   /dept/createDept:
     post:
+      description: 添加部门，返回添加结果
       parameters:
       - description: 添加部门
         in: body
-        name: data
+        name: deptInfo
         required: true
         schema:
           $ref: '#/definitions/request.Create'
@@ -383,15 +506,22 @@ paths:
                 msg:
                   type: string
               type: object
+        "500":
+          description: 添加部门失败
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: 添加部门
       tags:
       - SysDept
   /dept/delDeptInfo:
     delete:
+      consumes:
+      - application/json
+      description: 删除指定的部门及其所有下级部门信息
       parameters:
-      - description: 删除部门信息
+      - description: 待删除的部门信息
         in: body
-        name: data
+        name: deptInfo
         required: true
         schema:
           $ref: '#/definitions/system.SysDept'
@@ -407,15 +537,26 @@ paths:
                 msg:
                   type: string
               type: object
+        "400":
+          description: 请求参数验证失败
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 删除部门信息失败,请检查是否包含下级部门
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: 删除部门信息
       tags:
       - SysDept
   /dept/getDeptList:
     post:
+      consumes:
+      - application/json
+      description: 分页查询部门信息列表
       parameters:
-      - description: 空
+      - description: 部门列表查询参数
         in: body
-        name: data
+        name: deptPageInfo
         required: true
         schema:
           $ref: '#/definitions/request.GetDeptList'
@@ -423,25 +564,38 @@ paths:
       - application/json
       responses:
         "200":
-          description: 获取部门列表,返回部门列表
+          description: 获取部门列表成功
           schema:
             allOf:
-            - $ref: '#/definitions/response.Response'
+            - $ref: '#/definitions/response.PageResult'
             - properties:
                 ' msg':
                   type: string
-                data:
-                  $ref: '#/definitions/response.PageResult'
+                list:
+                  items:
+                    $ref: '#/definitions/system.SysDept'
+                  type: array
               type: object
+        "400":
+          description: 请求参数验证失败
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 获取部门列表失败
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: 获取部门列表
       tags:
       - SysDept
   /dept/updateDeptInfo:
     put:
+      consumes:
+      - application/json
+      description: 更新指定部门的详细信息
       parameters:
-      - description: 更新部门信息
+      - description: 待更新的部门信息
         in: body
-        name: data
+        name: dept
         required: true
         schema:
           $ref: '#/definitions/system.SysDept'
@@ -457,11 +611,20 @@ paths:
                 msg:
                   type: string
               type: object
+        "400":
+          description: 请求参数验证失败
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 更改部门信息失败
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: 更新部门信息
       tags:
       - SysDept
   /system/status:
     get:
+      description: 查询并返回系统的服务器相关信息
       produces:
       - application/json
       responses:
@@ -474,6 +637,10 @@ paths:
                 msg:
                   type: string
               type: object
+        "500":
+          description: 获取失败
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: 获取服务器信息
       tags:
       - System
@@ -594,4 +761,9 @@ paths:
       summary: 更改用户状态
       tags:
       - SysUser
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: x-token
+    type: apiKey
 swagger: "2.0"
