# router/system/sys_auto_code.go
@@ -11,6 +11,8 @@ func (a *AutoCodeRouter) InitAutoCodeRouter(Router *gin.RouterGroup) {
 	autoCodeRouter := Router.Group("autocode")
 	autoCodeApi := v1.ApiGroupApp.SystemApiGroup.AutoCodeApi
 	{
-		autoCodeRouter.POST("createPackage", autoCodeApi.CreatePackage) // 创建包
+		autoCodeRouter.POST("createPackage", autoCodeApi.CreatePackage)   // 创建包
+		autoCodeRouter.POST("getPackageList", autoCodeApi.GetPackageList) // 查询包
+		autoCodeRouter.POST("delPackageInfo", autoCodeApi.DelPackage)     // 删除包
 	}
 }
